--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <!-- Logo / Brand -->
     <a class="navbar-brand fw-bold" href="#">
-      🚩 Char Dham Yatra
+        <img src="images/logo.png" width="230">
+      <!-- 🚩 Char Dham Yatra -->
     </a>
 
     <!-- Mobile Toggle Button -->
@@ -876,6 +877,7 @@ $('.owl-carousel').owlCarousel({
 
       <!-- Brand & Description -->
       <div class="col-lg-4 col-md-6">
+        <img src="images/logo.png" width="100%">
         <h4 class="fw-bold mb-3">🚐 Char Dham Max Van</h4>
         <p class="text-light opacity-75">
           Trusted Max Traveller service for Char Dham Yatra, Kedarnath, Badrinath 
