--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@ $('.owl-carousel').owlCarousel({
       <!-- Brand & Description -->
       <div class="col-lg-4 col-md-6">
         <img src="images/logo.png" width="100%">
-        <h4 class="fw-bold mb-3">🚐 Char Dham Max Van</h4>
+        <!-- <h4 class="fw-bold mb-3">🚐 Char Dham Max Van</h4> -->
         <p class="text-light opacity-75">
           Trusted Max Traveller service for Char Dham Yatra, Kedarnath, Badrinath 
           and Uttarakhand travel. Safe, comfortable and affordable journeys.
