--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Char Dham Yatra</title>
+<title>Aadi Yogi Char Dham Yatra</title>
 
 <!-- Bootstrap 5 CDN -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <!-- Logo / Brand -->
     <a class="navbar-brand fw-bold" href="#">
         <img src="images/logo.png" width="230">
-      <!-- 🚩 Char Dham Yatra -->
+      <!-- 🚩 Aadi Yogi Char Dham Yatra -->
     </a>
 
     <!-- Mobile Toggle Button -->
@@ -106,7 +106,7 @@
 <!-- Hero Banner Section -->
 <section class="hero-section d-flex align-items-center text-white">
   <div class="container text-center">
-    <h1 class="fw-bold display-5">Char Dham Yatra 2026</h1>
+    <h1 class="fw-bold display-5">Aadi Yogi Char Dham Yatra 2026</h1>
     <p class="lead mt-3">Yamunotri • Gangotri • Kedarnath • Badrinath</p>
     <p class="mb-4">Spiritual journey of a lifetime — Book your holy trip now</p>
 
@@ -133,11 +133,11 @@
         <span class="badge bg-warning text-dark mb-3">About Us</span>
 
         <h2 class="fw-bold mb-3">
-          Experience the Divine <span class="text-warning">Char Dham Yatra</span>
+          Experience the Divine <span class="text-warning">Aadi Yogi Char Dham Yatra</span>
         </h2>
 
         <p class="text-muted mb-3">
-          Char Dham Yatra is one of the most sacred pilgrimages in India, covering 
+          Aadi Yogi Char Dham Yatra is one of the most sacred pilgrimages in India, covering 
           Yamunotri, Gangotri, Kedarnath, and Badrinath. Our mission is to provide 
           safe, comfortable, and spiritually enriching travel experiences.
         </p>
@@ -154,7 +154,7 @@
       <!-- Image -->
       <div class="col-md-6 text-center">
         <div class="image-box">
-          <img src="images/banner.jpg" class="img-fluid rounded-4 shadow-lg" alt="Char Dham Yatra">
+          <img src="images/banner.jpg" class="img-fluid rounded-4 shadow-lg" alt="Aadi Yogi Char Dham Yatra">
         </div>
       </div>
 
@@ -198,7 +198,7 @@
           <div class="service-icon">🚐</div>
           <h5 class="fw-bold mt-3">Char Dham Max Van Service</h5>
           <p class="text-muted">
-            Safe and comfortable Max Van service for full Char Dham Yatra.
+            Safe and comfortable Max Van service for full Aadi Yogi Char Dham Yatra.
           </p>
         </div>
       </div>
@@ -817,7 +817,7 @@
                   <label class="form-label">Travel Type</label>
                   <select class="form-select" required>
                     <option selected disabled>Select travel type</option>
-                    <option>Char Dham Yatra</option>
+                    <option>Aadi Yogi Char Dham Yatra</option>
                     <option>Kedarnath</option>
                     <option>Badrinath</option>
                     <option>Local Travel</option>
@@ -874,7 +874,7 @@
   <div class="container text-center">
 
     <h2 class="fw-bold mb-3">Our Travel Gallery</h2>
-    <p class="text-muted mb-5">Moments from Char Dham Yatra & Max Van journeys</p>
+    <p class="text-muted mb-5">Moments from Aadi Yogi Char Dham Yatra & Max Van journeys</p>
 
     <div class="row g-3">
 
@@ -942,7 +942,7 @@
       <div class="testimonial-card">
         <div class="testimonial-avatar">👤</div>
         <p class="text-muted mt-3">
-          "Very comfortable Max Van and very polite driver. Our Char Dham Yatra was smooth and peaceful."
+          "Very comfortable Max Van and very polite driver. Our Aadi Yogi Char Dham Yatra was smooth and peaceful."
         </p>
         <h6 class="fw-bold mt-2">Ravi Sharma</h6>
         <div class="text-warning">⭐⭐⭐⭐⭐</div>
@@ -1038,7 +1038,7 @@ $('.owl-carousel').owlCarousel({
         <img src="images/logo.png" width="100%">
         <!-- <h4 class="fw-bold mb-3">🚐 Char Dham Max Van</h4> -->
         <p class="text-light opacity-75">
-          Trusted Max Traveller service for Char Dham Yatra, Kedarnath, Badrinath 
+          Trusted Max Traveller service for Aadi Yogi Char Dham Yatra, Kedarnath, Badrinath 
           and Uttarakhand travel. Safe, comfortable and affordable journeys.
         </p>
       </div>
